# tog

./: LICENSE  README.md  pyproject.toml  setup.py
examples/: example.py
tog/: __init__.py
tog/src/abstracts/: abs_file_handler.py
tog/src/base/: converter.py
tog/src/classes/: handlers_manager.py
tog/src/classes/amino_acids/: amino_acid.py  file_handler.py
tog/src/classes/chromosomes/: chromosome.py  file_handler.py
tog/src/classes/codons/: codon.py  file_handler.py
tog/src/classes/mutations/: file_handler.py  mutation.py
tog/src/classes/nucleic_acids/: file_handler.py  nucleic_acid.py
tog/src/classes/nucleotide_bases/: file_handler.py  nucleotide_base.py
tog/src/constants/: path.py
tog/src/public/sources/: amino_acids.csv  chromosomes.csv  codons.csv  mutations.csv  nucleic_acids.csv  nucleotide_bases.csv
unit_tests/: tester.py
